# Offgrid-spatial-framework

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  main.cpp
include/OffGrid/: Coordinate.h  Waypoint.h  WaypointManager.h
src/: Coordinate.cpp  Waypoint.cpp  WaypointManager.cpp
tests/: test_engine.cpp
