cmake_minimum_required(VERSION 3.10)
project(OffGridSpatialFramework VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(include)
add_library(OffGridSpatial src/Coordinate.cpp src/Waypoint.cpp src/WaypointManager.cpp)
add_executable(OffGridApp main.cpp)
target_link_libraries(OffGridApp OffGridSpatial)